Started to change todo-list into a more organized task manager. Also, wrapping the dom into a shadow-shell-like instance is highly impractical. Attempting a different approach.

--- a/testing.html
+++ b/testing.html
@@ -9,6 +9,7 @@
                 color: purple;
             }
         </style>
+        <script type="text/javascript" src="src/origin.js"></script>
         <script type="text/javascript" src="origin.dom.js"></script>
     </head>
     <body>
